--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
 		"height": 900,
 		"showDevTools": false,
 		"useGPIO": false,
+		"useRemoteTrigger": false,
 		"grayscaleMode": true,
 		"preventScreensaver": true
 	},
