--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.16.3",
     "gphoto2": "^0.3.0",
     "jquery": "^3.3.1",
+    "lirc-client": "^2.0.0",
     "popper.js": "^1.14.1",
     "sharp": "^0.20.1",
     "socket.io": "^1.7.0"
