--- a/config.json
+++ b/config.json
@@ -6,15 +6,15 @@
 		"showDevTools": false,
 		"useGPIO": false,
 		"useRemoteTrigger": false,
-		"grayscaleMode": true,
+		"grayscaleMode": false,
 		"preventScreensaver": true
 	},
-	"maxImageSize": "1500",
-	"imageQuality": 80,
+	"maxImageSize": "1920",
+	"imageQuality": 100,
 	"firstPhotoCountdownLength": "5",
 	"followingPhotosCountdownLength": "3",
 	"photoPreviewDuration": "8",
-	"photoSeriesLength": "3",
+	"photoSeriesLength": "1",
 	"slideshow": {
 		"enabled": true,
 		"activatesAfterSeconds": "30",
@@ -31,7 +31,7 @@
 	"content_dir": "../content",
 	"webapp": {
 		"password": "test",
-		"maxDownloadImageSize": 800,
+		"maxDownloadImageSize": 1920,
 		"enableRemoteRelease": true
 	},
 	"branding": {
